# sound-spectrum-rust

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/cpal/: beep.rs  record_wav_windows.rs
src/iced/: clock.rs
